Assertion failure: mData in nsWebPDecoder.cpp:48
Categories
(Core :: Graphics: ImageLib, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | wontfix |
| firefox77 | --- | wontfix |
| firefox78 | --- | fixed |
People
(Reporter: bc, Assigned: aosmond)
References
()
Details
(Keywords: assertion)
Attachments
(2 files)
-
Assert Windows only
Assertion failure: mData, at /builds/worker/checkouts/gecko/image/decoders/nsWebPDecoder.cpp:48
#01: mozilla::image::nsWebPDecoder::DoDecode(mozilla::image::SourceBufferIterator&, mozilla::image::IResumable*) [image/decoders/nsWebPDecoder.cpp:110]
#02: mozilla::image::Decoder::Decode(mozilla::image::IResumable*) [image/Decoder.cpp:133]
#03: mozilla::image::MetadataDecodingTask::Run() [image/IDecodingTask.cpp:152]
#04: mozilla::image::DecodePoolWorker::Run() [image/DecodePool.cpp:276]
#05: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1222]
Bughunter first saw this on 2020-02-29.
| Reporter | ||
Comment 1•5 years ago
|
||
Windows only isn't quite true as bughunter also so this once with Ubuntu 19.10 debug asan build on https://anique.jp/.
Comment 2•5 years ago
|
||
Bob, do you have a crash report for this?
Comment 4•5 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)
| Assignee | ||
Comment 5•5 years ago
|
||
I think this might happen if you hit an OOM which sets an error in the SourceBuffer. We hit COMPLETE right away without any data pointer.
| Assignee | ||
Comment 6•5 years ago
|
||
If we hit an OOM or similar when creating a SourceBuffer for an image,
we will hit COMPLETE immediately as the next read that goes to the
SourceBuffer from a SourceBufferIterator. If the iterator has yet to do
a read, that means it will hit COMPLETE right away without giving
anything. This patch fixes the WebP decoder to handle this case, as well
as adds test cases for all of the current image decoders.
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•