Bug 1621283 - Ensure the WebP image decoder can handle source buffer errors. r=tnikkel

If we hit an OOM or similar when creating a SourceBuffer for an image,
we will hit COMPLETE immediately as the next read that goes to the
SourceBuffer from a SourceBufferIterator. If the iterator has yet to do
a read, that means it will hit COMPLETE right away without giving
anything. This patch fixes the WebP decoder to handle this case, as well
as adds test cases for all of the current image decoders.

Differential Revision: https://phabricator.services.mozilla.com/D77131